--- a/README.adoc
+++ b/README.adoc
@@ -2,19 +2,21 @@
 :toc:
 :toc-placement!:
 
-This library provides a convenient way of handling form state in a react+mobx web app.
+This library provides a convenient way of handling form state in a https://reactjs.org/[React] + https://mobx.js.org/[MobX] web app.
 
-As there was no satisfying solution for low level form handling with _mobx_ at the time we needed one, we implemented our own. The API roughly reflects the great https://vaadin.com/docs/v10/flow/binding-data/tutorial-flow-components-binder.html[Binder API of the Vaadin Framework], while strongly relying on mobx features.
+As there was no satisfying solution for low level form handling with _MobX_ at the time we needed it, we implemented our own. The API roughly reflects the great https://vaadin.com/docs/v10/flow/binding-data/tutorial-flow-components-binder.html[Binder API of the Vaadin Framework], while strongly relying on MobX features.
+
+It is written in https://www.typescriptlang.org/[TypeScript] and has first class support for TypeScript code, but should also work in _ES 5_+ environments.
 
 toc::[]
 
 == Concept
 
-A link:packages/mobx-binder/src/model/binder/Binder.ts[Binder] manages form state for a set of fields represented by "dumb" observable field instances implementing the link:packages/mobx-binder/src/model/fields/FieldStore.d.ts[FieldStore] interface. It is configured via a fluent api like this:
+A link:packages/mobx-binder/src/model/binder/Binder.ts[Binder] manages form state for a set of fields represented by "dumb" observable field instances implementing the link:packages/mobx-binder-core/src/model/fields/FieldStore.ts[FieldStore] interface. It is configured via a fluent api like this:
 
 [source,js]
 ----
-import { Binder, DefaultBinder, TextField, MomentConverter, EmailValidator } from 'mobx-binder'
+import { DefaultBinder, TextField, MomentConverter, EmailValidator } from 'mobx-binder'
 
 export default class ProfileStore {
     public salutation = new TextField('salutation') // <1>
@@ -23,7 +25,7 @@ export default class ProfileStore {
     public email = new TextField('email')
     public phoneNumber = new TextField('phoneNumber')
 
-    public binder: Binder // <2>
+    public binder: DefaultBinder // <2>
 
     constructor(private personStore: PersonStore,
                 i18nStore: I18nStore) {
@@ -54,16 +56,30 @@ export default class ProfileStore {
 <2> The Binder needs a translation function. We are using https://github.com/jverhoelen/react-mobx-i18n[react-mobx-i18n] which provides a compatible implementation.
 <3> Each field get's registered with the Binder, configuring the validator and converter chain as neccessary.
 
+== Getting Started
+
+If you decide for using mobx-binder, there are some flavors to choose from:
+
+Binder::
+    The core _Binder_ tries to be as independent as possible of validation and translation frameworks. If you already have some of those frameworks in use, you might want to use only the core components and integrate it.
+
+SimpleBinder::
+    This binder does not care about localization. Use this you don't need translations or your validation framework of choice already provides translated error messages. _SimpleBinder_ is part of the _mobx-binder-core_ module
+
+DefaultBinder::
+    The _DefaultBinder_ already makes assumptions about the translation library, which should support ES2015 templating style keys and named arguments, like https://www.npmjs.com/package/i18n-harmony[i18n-harmony] and https://github.com/jverhoelen/react-mobx-i18n[react-mobx-i18n]. For that scenario, it already provides a set of ready-to-use Validators and Converters. All this is part of the _mobx-binder_ module.
+
+To illustrate the power of the framework, most examples in this documentation are using the _DefaultBinder_.
+
 == Binder setup
 
 To instantiate a Binder, we need a `BinderContext` containing a translation function. This is needed for conversion and validation error messages. The translation function has to conform to the API of `react-mobx-i18n`.
 
 [source,js]
 ....
-import { default as Binder, Context } from 'self-service-server/lib/main/frontend/form/model/Binder'
+import { DefaultBinder } from 'mobx-binder'
 ...
-const context: Context = { t: i18nStore.translate }
-const binder = new Binder(context)
+const binder = new DefaultBinder(i18nStore.translate)
 ....
 
 To add fields to the binder, we just use the fluent API to "bind" fields:
@@ -254,3 +270,7 @@ public handleSubmit() {
 
 If a field related validation error occurs, the `err.message` is empty, es it may contain some "global" error message.
 
+== TODOs
+
+* Think about extracting moment support into mobx-binder-moment
+** Allows re-exports per module without introducing risk of bundling full moment library by accident
