--- a/README.adoc
+++ b/README.adoc
@@ -4,7 +4,7 @@
 
 This library provides a convenient way of handling form state in a https://reactjs.org/[React] + https://mobx.js.org/[MobX] web app.
 
-As there was no satisfying solution for low level form handling with _MobX_ at the time we needed it, we implemented our own. The API roughly reflects the great https://vaadin.com/docs/v10/flow/binding-data/tutorial-flow-components-binder.html[Binder API of the Vaadin Framework], while strongly relying on MobX features.
+The API roughly reflects the great https://vaadin.com/docs/v10/flow/binding-data/tutorial-flow-components-binder.html[Binder API of the Vaadin Framework], while strongly relying on MobX features.
 
 It is written in https://www.typescriptlang.org/[TypeScript] and has first class support for TypeScript code, but should also work in _ES 5_+ environments.
 
@@ -16,7 +16,10 @@ A link:packages/mobx-binder/src/model/binder/Binder.ts[Binder] manages form stat
 
 [source,js]
 ----
-import { DefaultBinder, TextField, MomentConverter, EmailValidator } from 'mobx-binder'
+import { DefaultBinder, TextField } from 'mobx-binder'
+import { MomentConverter } from 'mobx-binder/lib/conversion/MomentConverter'
+import { EmailValidator } from 'mobx-binder/lib/validation/EmailValidator'
+import { TranslateFunction } from 'react-mobx-i18n'
 
 export default class ProfileStore {
     public salutation = new TextField('salutation') // <1>
@@ -28,9 +31,9 @@ export default class ProfileStore {
     public binder: DefaultBinder // <2>
 
     constructor(private personStore: PersonStore,
-                i18nStore: I18nStore) {
+                t: TranslateFunction) {
 
-        this.binder = new DefaultBinder(i18nStore.translate)
+        this.binder = new DefaultBinder({ t })
         this.binder
             .forField(this.salutation).isRequired().bind() <3>
             .forField(this.fullName).isRequired().bind()
@@ -52,7 +55,7 @@ export default class ProfileStore {
     }
 }
 ----
-<1> These fields store all state needed to render the corresponding field view.
+<1> These fields store all state needed to render the corresponding field view. All the properties are observable.
 <2> The Binder needs a translation function. We are using https://github.com/jverhoelen/react-mobx-i18n[react-mobx-i18n] which provides a compatible implementation.
 <3> Each field get's registered with the Binder, configuring the validator and converter chain as neccessary.
 
@@ -79,7 +82,7 @@ To instantiate a Binder, we need a `BinderContext` containing a translation func
 ....
 import { DefaultBinder } from 'mobx-binder'
 ...
-const binder = new DefaultBinder(i18nStore.translate)
+const binder = new DefaultBinder({ t: i18nStore.translate })
 ....
 
 To add fields to the binder, we just use the fluent API to "bind" fields:
@@ -159,12 +162,12 @@ For every field, we can specify validations to be done:
 
 [source,js]
 ....
-binder.forField(fullName).isRequired().withValidator(Validators.email()).bind()
+binder.forField(fullName).isRequired().withValidator(EmailValidator.validate()).bind()
 ....
 
 Validations are processed in order of method calls - so in this example, it is first checked if the `required` validation fails, and if it does, no further validation will happen.
 
-To see the list of possible validations, look at `Validators.ts`. You can also define your own custom validator, as long as it implements the `Validator` type.
+To see the list of already supported validations, take a look into the `mobx-binder/src/validation/` folder. You can also easily define your own custom validator, as long as it implements the `Validator` type.
 
 The `isRequired()` validation has the special side effect that the `required` property is set on the field, so that the rendering component can highlight it.
 
@@ -178,7 +181,7 @@ If validation incurs expensive calculations or a backend request, it's possible 
 ....
 binder
     .forField(fullName)
-    .withAsyncValidator((context, value) => sleep(1000).then(() => Validators.email()(context, value)))
+    .withAsyncValidator((value) => sleep(1000).then(() => EmailValidator.validate()(value)))
     .bind()
 ....
 
@@ -193,8 +196,7 @@ Only field values where asynchronous validation has been successfully finished a
 
 == Conditional validation
 
-Sometimes, the validation of one field depends on the value of another field. In this case, we can trigger the validation via an `onChange`
- event handler of that other field.
+Sometimes, the validation of one field depends on the value of another field. In this case, we can trigger the validation via an `onChange` event handler of that other field.
 
 [source,js]
 ....
@@ -274,3 +276,5 @@ If a field related validation error occurs, the `err.message` is empty, es it ma
 
 * Think about extracting moment support into mobx-binder-moment
 ** Allows re-exports per module without introducing risk of bundling full moment library by accident
+* Create more re-usable validators
+* Create integration components vor various open source React component libraries (contributions are welcome ;-)
