--- a/README.adoc
+++ b/README.adoc
@@ -103,6 +103,8 @@ To add fields to the binder, we just use the fluent API to "bind" fields:
 
 [source,js]
 ....
+import { DefaultBinder, TextField } from 'mobx-binder'
+...
 public fullName = new TextField('fullName')
 ...
 binder.forField(fullName).bind()
