--- a/packages/mobx-binder-core/README.adoc
+++ b/packages/mobx-binder-core/README.adoc
@@ -1,3 +1,3 @@
 # mobx-binder-core
 
-For documentation, please refer to the main link:../../README.adoc[README].
+For documentation, please refer to the main link:../../README.md[README].
