--- a/packages/sample/README.adoc
+++ b/packages/sample/README.adoc
@@ -1,3 +1,3 @@
 # mobx-binder sample project
 
-For documentation, please refer to the main link:../../README.adoc[README].
+For documentation, please refer to the main link:../../README.md[README].
