Change links to point to the github master branch

--- a/packages/site/src/docz/start.mdx
+++ b/packages/site/src/docz/start.mdx
@@ -14,7 +14,7 @@ SimpleBinder
 This binder does not care about localization. Use this you don’t need translations or your validation framework of choice already provides translated error messages. *SimpleBinder* is part of the *mobx-binder-core* module
 
 DefaultBinder
-The *DefaultBinder* already makes assumptions about the translation library, which should support ES2015 templating style keys and named arguments, like [i18n-harmony](https://www.npmjs.com/package/i18n-harmony) and [react-mobx-i18n](https://github.com/jverhoelen/react-mobx-i18n). For that scenario, it already provides a set of ready-to-use Validators and Converters. All this is part of the *mobx-binder* module.
+The *DefaultBinder* already makes assumptions about the translation library, which should support ES2015 templating style keys and named arguments, like [i18n-harmony](https://www.npmjs.com/package/i18n-harmony). For that scenario, it already provides a set of ready-to-use Validators and Converters. All this is part of the *mobx-binder* module.
 
 To illustrate the power of the framework, most examples in this documentation are using the *DefaultBinder*.
 
