--- a/packages/site/src/docz/usage/visibility.mdx
+++ b/packages/site/src/docz/usage/visibility.mdx
@@ -6,13 +6,12 @@ menu: Usage
 
 # Conditional visibility
 
-If a field should be hidden as part of a value change of a different field, it may become necessary to remove that field from the Binder completely, especially if it’s value is currently invalid and would prevent a form submission:
+If a field should be hidden as part of a value change of a different field, it may become necessary to remove that field from the Binder completely, especially if it’s value is currently invalid and would prevent a form submission. Conditional visibility is not directly supported by the framework, but it's possible to remove bindings via `binder.removeBinding(field)` and re-add them later using the regular `binder.forField()`.
 
 ``` typescript
 binder.removeBinding(fullName)
 ```
 
 This updates the global validation status based on the fields that are left.
-
 
 {/* TODO add support to re-adding bindings without having to re-build them */}
