--- a/packages/site/src/docz/index.mdx
+++ b/packages/site/src/docz/index.mdx
@@ -7,7 +7,7 @@ route: /
 
 This library provides a convenient way of handling form state in a [React](https://reactjs.org/) + [MobX](https://mobx.js.org/) web app.
 
-The API roughly reflects the great [Binder API of the Vaadin Framework](https://vaadin.com/docs/v10/flow/binding-data/tutorial-flow-components-binder.html), while strongly relying on MobX features.
+The API is inspired by the [Binder API of the Vaadin Framework](https://vaadin.com/docs/v10/flow/binding-data/tutorial-flow-components-binder.html), while strongly relying on MobX features.
 
 It is written in [TypeScript](https://www.typescriptlang.org/) and has first class support for TypeScript code, but should also work in *ES 5*+ environments.
 
@@ -23,9 +23,10 @@ It is written in [TypeScript](https://www.typescriptlang.org/) and has first cla
 - Validators and converters for [Moment.js](https://momentjs.com) and [Day.js](https://day.js.org)
 - Promise based API
 
+
 # Basic Example
 
-A [Binder](packages/mobx-binder-core/src/model/binder/Binder.ts) manages form state for a set of fields represented by "dumb" observable field instances implementing the [FieldStore](packages/mobx-binder-core/src/model/fields/FieldStore.ts) interface. It is configured via a fluent api like this:
+A [Binder](https://github.com/metro-nom/mobx-binder/tree/master/packages/mobx-binder-core/src/model/binder/Binder.ts) manages form state for a set of fields represented by "dumb" observable field instances implementing the [FieldStore](https://github.com/metro-nom/mobx-binder/tree/master/packages/mobx-binder-core/src/model/fields/FieldStore.ts) interface. It is configured via a fluent api like this:
 
 ``` typescript
 import { DefaultBinder, TextField, EmailValidator } from 'mobx-binder'
@@ -76,4 +77,4 @@ export default class ProfileStore {
 -   The Binder needs a translation function. We are using [react-mobx-i18n](https://github.com/jverhoelen/react-mobx-i18n) which provides a compatible implementation.
 -   Each field gets registered with the Binder, configuring the validator and converter chain as neccessary.
 -   Load initial values via simple object properties (see [Loading and storing field values](#bind-load))
-A simple [example](packages/sample/src/app/forms/FormField.tsx) of how to render such fields can be found in the [sample code](packages/sample).
+A simple [example](https://github.com/metro-nom/mobx-binder/tree/master/packages/sample/src/app/forms/FormField.tsx) of how to render such fields can be found in the [sample code](https://github.com/metro-nom/mobx-binder/tree/master/packages/sample).
