--- a/packages/site/src/docz/usage/rendering.mdx
+++ b/packages/site/src/docz/usage/rendering.mdx
@@ -10,4 +10,4 @@ As the whole binder is only about state, you are free in how to render component
 
 For rendering a form, best practice is to create form field wrapper components.
 
-Please also see the [example implementation](packages/sample/src/app/forms/FormField.tsx) which integrates with [reactstrap](https://reactstrap.github.io/) components.
+Please also see the [example implementation](https://github.com/metro-nom/mobx-binder/tree/master/packages/sample/src/app/forms/FormField.tsx) which integrates with [reactstrap](https://reactstrap.github.io/) components.
