--- a/packages/site/src/docz/usage/conversion.mdx
+++ b/packages/site/src/docz/usage/conversion.mdx
@@ -20,7 +20,7 @@ binder.forStringField(fullName)
     .bind()
 ```
 
-Converters have to fullfill the following interface:
+Converters have to fulfill the following interface:
 
 ``` typescript
 interface Converter<_ValidationResult, ViewType, ModelType> {
