--- a/README.adoc
+++ b/README.adoc
@@ -235,6 +235,8 @@ binder.store(account) // =>  account.businessRelation.person.fullName === 'Max M
 
 When you load() data, all the field values get a new value, which is internally stored as "unchanged". Only if the field value is changing via an `updateValue()` operation, the `changed` property on field level gets true.
 
+Since version 1.4, the backend representation is also checked for equality in case the current value is valid. Changes that lead to the same valid backend representation are treated as unchanged.
+
 You can get a backend object only filled with data that has been changed via the `Binder.changedData` getter.
 
 In combination with the Binders `apply()` method it's possible to find changes between two sets of data:
