--- a/README.adoc
+++ b/README.adoc
@@ -233,9 +233,22 @@ binder.store(account) // =>  account.businessRelation.person.fullName === 'Max M
 
 === Handling changes
 
-When you load() data, all the field values get a new value, which is internally stored as "unchanged". Only if the field value is changing via an `updateValue()` operation, the `changed` property on field level gets true.
+When you load() data, all the field values get a new value, which is internally stored as "unchanged".
+Only if the field value is changing via an `updateValue()` operation, the `changed` property on field level gets true.
 
-For string fields, you can pass an additional `customChangeDetectionValueProvider` function for custom equality checks, in case you want different values to be considered the same, like phone numbers that can start with '+' or '00' or irrespective of leading or trailing spaces. Please note, that this does not affect the behaviour of <<Change events>> and `onChange` handlers.
+In the FieldOptions, you can pass an additional `customChangeDetectionValueProvider` function for custom equality checks, in case you want different values to be considered the same, like phone numbers that can start with '+' or '00' or irrespective of any spaces.
+Please note, that this does not affect anything else than the `changed` property of the field and must not throw errors.
+It's especially useful in case of validations that should only happen when a field value actually changed, like for uniqueness checks.
+
+[source,js]
+----
+binder
+    .forStringField(phoneNumber, {
+        customChangeDetectionValueProvider:
+            (value: string) => value.replaceAll(' ', '').replace(/^00/, '+')
+    })
+    .bind()
+----
 
 You can get a backend object only filled with data that has been changed via the `Binder.changedData` getter.
 
@@ -266,6 +279,7 @@ binder.apply({
 
 // binder.changedData returns { fullName: 'Max Mustermann-Musterfrau' }
 ----
+
 
 === Validation
 
